Fixed pre issue with wrapping

--- a/assets/spaceui.css
+++ b/assets/spaceui.css
@@ -26,6 +26,10 @@ footer {
 	padding-bottom: 15px;	
 }
 
+.tiddler pre {
+	 white-space: pre-wrap;
+}
+
 .tiddler:nth-child(even) {
     border-top: solid 2px #e9e9e9;    
     border-bottom: solid 2px #e9e9e9;    
@@ -48,3 +52,12 @@ footer {
 	right: 20px;
 	position: absolute;
 }
+
+header .toolbar {
+	top: 15px;
+}
+
+.make-top {
+	top: 0px;
+}
+
